--- a/views/index.erb
+++ b/views/index.erb
@@ -55,7 +55,18 @@
 
         console.log(status);
         if ( status == '0') {
-          player.playVideo();
+          var xhr = new XMLHttpRequest();
+          xhr.open('GET', '/next?videoid=' + player.getVideoData().video_id);
+          xhr.onreadystatechange = function() {
+            if(xhr.readyState === 4 && xhr.status === 200) {
+              console.log(xhr.responseText);
+              if(xhr.responseText !== "") {
+                player.loadVideoById({videoId: xhr.responseText, startSeconds: 0});
+              }
+              player.playVideoAt();
+            }
+          }
+          xhr.send();
         }
       }
       function stopVideo() {
