--- a/views/index.erb
+++ b/views/index.erb
@@ -46,6 +46,9 @@
                 player.loadVideoById(params.videoid);
               }
               break;
+            case "force":
+              stopVideo();
+              break;
             }
         });
       }
