--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <html>
   <body>
     <div id="player"></div>
-    <div>現在 <span id="cu">n</span> 人が見てるぽい</div>
+    <div>現在 <span id="cu">n</span> 人が見てるぽい</div>
     <script>
       var tag = document.createElement('script');
 
@@ -69,6 +69,9 @@
             console.log(xhr.responseText);
             if(xhr.responseText !== "") {
               player.loadVideoById({videoId: xhr.responseText, startSeconds: 0});
+            }
+            if(xhr.responseText === "") {
+              $.ajax(this);
             }
             player.playVideoAt();
           }
