--- a/views/index.erb
+++ b/views/index.erb
@@ -62,20 +62,26 @@
         }
       }
       function nextVideo() {
+        var nextVideoStatus = '';
         var xhr = new XMLHttpRequest();
-        xhr.open('GET', '/next?videoid=' + player.getVideoData().video_id);
-        xhr.onreadystatechange = function() {
-          if(xhr.readyState === 4 && xhr.status === 200) {
-            console.log(xhr.responseText);
-            if(xhr.responseText !== "") {
-              player.loadVideoById({videoId: xhr.responseText, startSeconds: 0});
+        while (true) {
+          xhr.open('GET', '/next?videoid=' + player.getVideoData().video_id);
+          xhr.onreadystatechange = function() {
+            if(xhr.readyState === 4 && xhr.status === 200) {
+              console.log(xhr.responseText);
+              if(xhr.responseText !== "") {
+                player.loadVideoById({videoId: xhr.responseText, startSeconds: 0});
+                nextVideoStatus = 'success';
+              } else {
+                nextVideoStatus = 'failed';
+              }
             }
-            if(xhr.responseText === "") {
-              $.ajax(this);
-            }
-            player.playVideoAt();
+          }
+          if (nextVideoStatus === 'success') {
+            break;
           }
         }
+        player.playVideoAt();
         xhr.send();
       }
       function stopVideo() {
