除外できるようにしてみた

--- a/views/list.erb
+++ b/views/list.erb
@@ -64,6 +64,7 @@
             <%= time %>
             <%= "@#{name}" %>
             <a href="https://www.youtube.com/watch?v=<%= yid %>" target="_blank" rel="noopener"><i class="fab fa-youtube text-danger"></i></a>
+            <a href="./ignore?yid=<%= yid %>" class="btn btn-outline-danger">除外する</a>
           </li>
         <% end %>
       </ul>
