--- a/views/list.erb
+++ b/views/list.erb
@@ -19,12 +19,11 @@
         li = ul.getElementsByTagName('li');
 
         for (i = 0; i < li.length; i++) {
-            a = li[i].getElementsByTagName("a")[0];
-            if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
-                li[i].style.display = "";
-            } else {
-                li[i].style.display = "none";
-            }
+          if (li[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+          } else {
+            li[i].style.display = "none";
+          }
         }
       }
     </script>
@@ -37,9 +36,12 @@
         </div>
       </div>
       <ul class="list-group" id="youtube_ul">
-        <% @list.each do |yid, name, title| %>
+        <% @list.each do |yid, name, title, playback_time| %>
+          <%- time = "#{playback_time / 60}分#{playback_time % 60}秒" %>
           <li class="list-group-item">
             <a href="https://www.youtube.com/watch?v=<%= yid %>"><%= title %></a>
+            <%= time %>
+            <%= "@#{name}" %>
           </li>
         <% end %>
       </ul>
