--- a/views/list.erb
+++ b/views/list.erb
@@ -3,6 +3,7 @@
   <head>
     <title>登録済リスト</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <style>
       li {
         margin: 5px;
@@ -26,10 +27,30 @@
           }
         }
       }
+      var tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '360',
+          width: '640',
+        });
+
+      }
+      function play(yid)
+      {
+        document.getElementById('player').style.display = "block";
+        player.loadVideoById(yid);
+      }
     </script>
   </head>
   <body>
     <div class="container-fluid">
+      <div id="player"></div>
       <form>
         <div class="form-group">
           <input type="text" id="myInput" onkeyup="myFunction()" class="form-control" placeholder="Search for names..">
@@ -39,9 +60,10 @@
         <% @list.each do |yid, name, title, playback_time| %>
           <%- time = "#{playback_time / 60}分#{playback_time % 60}秒" %>
           <li class="list-group-item">
-            <a href="https://www.youtube.com/watch?v=<%= yid %>"><%= title %></a>
+            <a href="#" onClick="javascript: play('<%= yid %>');"><%= title %></a>
             <%= time %>
             <%= "@#{name}" %>
+            <a href="https://www.youtube.com/watch?v=<%= yid %>" target="_blank" rel="noopener"><i class="fab fa-youtube text-danger"></i></a>
           </li>
         <% end %>
       </ul>
